# bluebook

./: cargo.toml  todo.typ
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/easy_mark_editor/: easy_mark_highlighter.rs  mod.rs
app/src/formatting/: citation.rs  mod.rs
app/src/widgets/: mod.rs
app/src/widgets/rich_text_editor/: cursor.rs  editor.rs  editor_view.rs  mod.rs  view.rs
bluebook_core/: Cargo.toml  cursor.md
bluebook_core/src/: annotation.rs  block.rs  buffer.rs  char.rs  codepoint.rs  command.rs  context.rs  coordinates.rs  ctx.rs  cursor.rs  editor.rs  encoding.rs  error.rs  expr.rs  graphemes.rs  interval_tree.rs  lib.rs  line.rs  line_ending.rs  mode.rs  movement.rs  paragraph.rs  position.rs  search.rs  selection.rs  sentence.rs  text_annotation.rs  text_buffer.rs  text_buffer_cursor.rs  word.rs
bluebook_core/src/buffer/: mod.rs
bluebook_core/src/buffer/contiguous_string/: buffer_impl.rs
bluebook_core/src/buffer/peritext_buffer/: buffer_impl.rs  cursor_impl.rs  grapheme.rs  mod.rs
bluebook_core/src/buffer/rope/: buffer_impl.rs  cursor_impl.rs  drain.rs  grapheme_cluster_cursor.rs  mod.rs
bluebook_core/src/buffer/rope_buffer/: buffer_impl.rs  cursor_impl.rs  grapheme.rs  mod.rs
bluebook_core/src/buffer/string_buffer/: buffer_impl.rs  grapheme.rs  mod.rs  span_iter.rs
bluebook_core/src/buffer_impl/rope/: block_cursor.rs  buffer.rs  codepoint_cursor.rs  grapheme_cursor.rs  line_cursor.rs  mod.rs  paragraph_cursor.rs  search.rs  selection.rs  sentence_cursor.rs  (+2 more)
bluebook_core/src/span/: augmented_avl_tree.rs  interval.rs  mod.rs
(+25 files in other folders)
